change author of site

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Wenting Pu Website
 
 # Your name to show in the footer
-author: Some Person
+author: Wenting Pu
 
 # --- List of links in the navigation bar --- #
 
